--- a/d08/ex00/style.css
+++ b/d08/ex00/style.css
@@ -1,11 +1,12 @@
 .grid {
+  border-spacing: 0;
   table-layout: fixed;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 150px);;
 }
 
 .gridtd {
-
+  border-spacing: 0;
   border: 1px solid #000000;
   word-wrap:break-word;
 }
